uploaded all images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Bar -->
     <div class="bar">
         <div class="bar__content u-centered">
-            <a href="index.html"><img class="bar__logo" src="img/cryptids-logo-04.png" alt="logo image"></a>
+            <a href="index.html"><img class="bar__logo" src="img/qr-logo-03.png" alt="logo image"></a>
             <input type="checkbox" id="inpNavToggle">
             <label class="bar__nav-toggle" for="inpNavToggle">
                 <i class="material-icons">menu</i>
@@ -84,7 +84,7 @@
         <div class="cards-box">
 
             <div class="card">
-                <img src="img/cryptids-logo-01.png" alt="">
+                <img src="img/qr-scan1.png" alt="QR code 1">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -108,6 +108,7 @@
             </div>
 
             <div class="card">
+                <img src="img/qr-scan2.png" alt="QR code 2">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -130,6 +131,7 @@
             </div>
 
             <div class="card">
+                <img src="img/qr-scan3.png" alt="QR code 3">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -147,6 +149,7 @@
             </div>
 
             <div class="card">
+                <img src="img/qr-scan4.png" alt="QR code 4">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -172,19 +175,19 @@
 <section class="gallery" id="gallery">
     <div class="gallery-box">
         <div class="gallery-item">
-            <img src="img/qr1.png" alt="">
+            <img src="img/qr1.png" alt="tattoo qr code">
         </div>
         <div class="gallery-item">
-            <img src="img/qr2.png" alt="">
+            <img src="img/qr2.png" alt="tattoo qr code">
         </div>
         <div class="gallery-item">
-            <img src="img/qr3.png" alt="">
+            <img src="img/qr3.png" alt="tattoo qr code">
         </div>
         <div class="gallery-item">
-            <img src="img/qr4.png" alt="">
+            <img src="img/qr4.png" alt="tattoo qr code">
         </div>
         <div class="gallery-item">
-            <img src="img/qr5.png" alt="">
+            <img src="img/qr5.png" alt="tattoo qr code">
         </div>
     </div>
 </section>
