--- a/page4.html
+++ b/page4.html
@@ -39,9 +39,9 @@
                 <h1>and expand my creativity and imagination to create something new.<span></span></h1>
                 <!-- <h1>Thank you... <span>for a great class Brittany. You taught me a lot, but most importantly you taught me how to have an eye for design and expand my creativity and imagination to create something new.</span></h1> -->
                 <p>
-                    Scan the next QR code on the 
+                    You have finished decoding the message. You can go back to the  
                     <a href="index.html">home page</a>
-                    to discover the rest of the secret message.
+                    now.
 
                 </p>
             </div>
@@ -59,7 +59,7 @@
     <!-- Bar -->
     <div class="bar">
         <div class="bar__content u-centered">
-            <a href="index.html"><img class="bar__logo" src="img/cryptids-logo-03.png" alt="logo image"></a>
+            <a href="index.html"><img class="bar__logo" src="img/qr-logo-03.png" alt="logo image"></a>
             <input type="checkbox" id="inpNavToggle">
             <label class="bar__nav-toggle" for="inpNavToggle">
                 <i class="material-icons">menu</i>
