--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     <!-- Bar -->
     <div class="bar">
         <div class="bar__content u-centered">
-            <a href="index.html"><img class="bar__logo" src="img/cryptids-logo-03.png" alt="logo image"></a>
+            <a href="index.html"><img class="bar__logo" src="img/qr-logo-03.png" alt="logo image"></a>
             <input type="checkbox" id="inpNavToggle">
             <label class="bar__nav-toggle" for="inpNavToggle">
                 <i class="material-icons">menu</i>
