updated pdf link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </label>
             <nav class="nav">
                 <a class="nav__link" href="#header">Home</a>
-                <a class="btn-green" href="#vimeo" target="_blank">PDF Design</a>
+                <a class="btn-green" href="https://drive.google.com/file/d/1ssRW5vD_vzysjjfAR07aNZU6DvYS4vet/view?usp=sharing" target="_blank">PDF Design</a>
             </nav>
         </div>
     </div>
@@ -206,7 +206,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 <div class="footer-link">
-                    <a href="#about" target="_blank">PDF Design</a>
+                    <a href="https://drive.google.com/file/d/1ssRW5vD_vzysjjfAR07aNZU6DvYS4vet/view?usp=sharing" target="_blank">PDF Design</a>
                 </div>
                 <div class="footer-link">
                     <a href="https://www.vice.com/en/article/y3dapk/qr-code-tattoos-pandemic-vaccine-green-pass" target="_blank">Article Link</a>
